// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering of TractPrioritization Component checks if component renders No when score N communities = false, tribal points in AK = null tribal % = null 1`] = `
<DocumentFragment>
  <h3>
    No
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders Partially when score N communities = false, tribal points in AK = 1 tribal % = null 1`] = `
<DocumentFragment>
  <h3>
    Partially
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders Partially when score N communities = false, tribal points in AK = 2 tribal % = 0 1`] = `
<DocumentFragment>
  <h3>
    Partially
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders Partially when score N communities = false, tribal points in AK = 3 tribal % = 0.13 1`] = `
<DocumentFragment>
  <h3>
    Partially
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders Partially when score N communities = false, tribal points in AK = null tribal % = 0 1`] = `
<DocumentFragment>
  <h3>
    Partially
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders Partially when score N communities = false, tribal points in AK = null tribal % = 0.13 1`] = `
<DocumentFragment>
  <h3>
    Partially
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders YES when score N communities = true, tribal points in AK = 1 tribal % = null 1`] = `
<DocumentFragment>
  <h3>
    YES
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders YES when score N communities = true, tribal points in AK = 2 tribal % = 0 1`] = `
<DocumentFragment>
  <h3>
    YES
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders YES when score N communities = true, tribal points in AK = 3 tribal % = 0.45 1`] = `
<DocumentFragment>
  <h3>
    YES
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders YES when score N communities = true, tribal points in AK = null tribal % = 0 1`] = `
<DocumentFragment>
  <h3>
    YES
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders YES when score N communities = true, tribal points in AK = null tribal % = 0.45 1`] = `
<DocumentFragment>
  <h3>
    YES
  </h3>
</DocumentFragment>
`;

exports[`rendering of TractPrioritization Component checks if component renders YES when score N communities = true, tribal points in AK = null tribal % = null 1`] = `
<DocumentFragment>
  <h3>
    YES
  </h3>
</DocumentFragment>
`;
